fix footer z-index and project scroll

--- a/app/projects/projects.module.css
+++ b/app/projects/projects.module.css
@@ -16,6 +16,7 @@
     padding: auto 40px auto 40px;
     gap: 32px;
     font-family: var(--font-geist-sans);
+    overflow-y: hidden;
   }
   
   @media (prefers-color-scheme: dark) {
