--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -12,7 +12,7 @@
   justify-content: center;
   gap: 16px;
   background-color: var(--background);
-  /* z-index: 10; */
+  z-index: 10;
   width: 100vw;
 }
 
